force-app/main/default/objects/Pre_assessment__c/Pre_assessment__c.object-meta.xml
<CustomObject>
    <label>Pre Assessment</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Pre-Asessment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pre Assessments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>