force-app/main/default/objects/Pre_assessment__c/fields/Age_1__c.field-meta.xml
<CustomField>
    <fullName>Age_1__c</fullName>
    <description>The field is used to capture the patient&apos;s age at the time of the pre-assessment.</description>
    <label>Age</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>