force-app/main/default/objects/Pre_assessment__c/fields/Aggression__c.field-meta.xml
<CustomField>
    <fullName>Aggression__c</fullName>
    <description>The field is used to indicate  if the patient has a history of aggressive behavior</description>
    <inlineHelpText>Aggression? (Tx discharges due to aggression, arrests)</inlineHelpText>
    <label>Aggression?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>