force-app/main/default/objects/Pre_assessment__c/fields/Any_history_of_eating__c.field-meta.xml
<CustomField>
    <fullName>Any_history_of_eating__c</fullName>
    <description>This field is used to inquire about the patient&apos;s history of eating disorders.</description>
    <inlineHelpText>Bulimia, Anorexia, Binge Eating</inlineHelpText>
    <label>Any history of eating disorder?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>