force-app/main/default/objects/Pre_assessment__c/fields/Any_history_of_selfharm__c.field-meta.xml
<CustomField>
    <fullName>Any_history_of_selfharm__c</fullName>
    <description>This field is used to indicate whether the patient has a history of self-harming behaviors.</description>
    <inlineHelpText>Burning, cutting, aggression</inlineHelpText>
    <label>Any history of self harm?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>