force-app/main/default/objects/Pre_assessment__c/fields/Any_history_of_Trauma__c.field-meta.xml
<CustomField>
    <fullName>Any_history_of_Trauma__c</fullName>
    <description>The field is used to to indicate whether the patient has a history of trauma.</description>
    <label>Any history of Trauma</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Domestic violence</fullName>
            </value>
            <value>
                <fullName>Physical</fullName>
            </value>
            <value>
                <fullName>Sexual</fullName>
            </value>
            <value>
                <fullName>Emotional abuse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>