force-app/main/default/objects/Pre_assessment__c/fields/Any_suicidal_or_homicidal_ideations__c.field-meta.xml
<CustomField>
    <fullName>Any_suicidal_or_homicidal_ideations__c</fullName>
    <description>This field is used to inquire about the patient&apos;s current thoughts regarding suicide or homicide.</description>
    <inlineHelpText>Suicide attempt or hospitalizations</inlineHelpText>
    <label>Any suicidal or homicidal ideations?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>