force-app/main/default/objects/Pre_assessment__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to Specify the individual, team, or entity to whom a particular task, case, or responsibility is delegated</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pre_assessments1</relationshipName>
    <type>Lookup</type>
</CustomField>