force-app/main/default/objects/Pre_assessment__c/fields/Charged_With_Sex_Offense__c.field-meta.xml
<CustomField>
    <fullName>Charged_With_Sex_Offense__c</fullName>
    <description>This field is used to indicate whether the patient has been charged or convicted of a sexual offense.</description>
    <label>Charged or Convicted of Sexual Offense?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>