force-app/main/default/objects/Pre_assessment__c/fields/Current_Medical_Diagnoses_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Current_Medical_Diagnoses_Conditions__c</fullName>
    <description>This field is used to enter details about the patient&apos;s existing medical diagnoses or health conditions</description>
    <label>Current Medical Diagnoses/Conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>