force-app/main/default/objects/Pre_assessment__c/fields/Current_Psychiatric_Issues_Diagnoses__c.field-meta.xml
<CustomField>
    <fullName>Current_Psychiatric_Issues_Diagnoses__c</fullName>
    <description>This field is used to enter details about the patient&apos;s existing psychiatric issues or diagnoses.</description>
    <label>Current Psychiatric Issues/Diagnoses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>