force-app/main/default/objects/Pre_assessment__c/fields/Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth__c</fullName>
    <description>This field is used to record the patient&apos;s date of birth</description>
    <label>Date Of Birth</label>
    <type>Date</type>
</CustomField>