force-app/main/default/objects/Pre_assessment__c/fields/Deceased__c.field-meta.xml
<CustomField>
    <fullName>Deceased__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate whether the patient is deceased.</description>
    <label>Deceased</label>
    <type>Checkbox</type>
</CustomField>