force-app/main/default/objects/Pre_assessment__c/fields/Detox__c.field-meta.xml
<CustomField>
    <fullName>Detox__c</fullName>
    <description>This field is used to indicate whether the patient is in need of detoxification.</description>
    <label>Detox</label>
    <length>100</length>
    <type>Text</type>
</CustomField>