force-app/main/default/objects/Pre_assessment__c/fields/Dose__c.field-meta.xml
<CustomField>
    <fullName>Dose__c</fullName>
    <description>This field is used to capture the specific dose of medication or substance used by the patient.</description>
    <label>Dose</label>
    <length>100</length>
    <type>Text</type>
</CustomField>