force-app/main/default/objects/Pre_assessment__c/fields/History_of_Sleep_Apnea_or_use_a_CPAP_Mac__c.field-meta.xml
<CustomField>
    <fullName>History_of_Sleep_Apnea_or_use_a_CPAP_Mac__c</fullName>
    <description>This field is used to inquire about the patient&apos;s history of sleep apnea and CPAP machine usage.</description>
    <inlineHelpText>History of Sleep Apnea or use a CPAP Machine?</inlineHelpText>
    <label>History of Sleep Apnea/Use CPAP Machine?</label>
    <type>TextArea</type>
</CustomField>