force-app/main/default/objects/Pre_assessment__c/fields/History_of_substance_abuse_in_the_family__c.field-meta.xml
<CustomField>
    <fullName>History_of_substance_abuse_in_the_family__c</fullName>
    <description>This field is used to  inquire whether there is a history of substance abuse in the patient&apos;s family.</description>
    <label>History of substance abuse in the family</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>