force-app/main/default/objects/Pre_assessment__c/fields/Homeless_Sober_Living_Parents__c.field-meta.xml
<CustomField>
    <fullName>Homeless_Sober_Living_Parents__c</fullName>
    <description>This field is used to describe the patient&apos;s living situation, such as being homeless, residing in a sober-living environment, or with parents.</description>
    <label>Homeless,Sober-Living,Parents</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>