force-app/main/default/objects/Pre_assessment__c/fields/Incidentals__c.field-meta.xml
<CustomField>
    <fullName>Incidentals__c</fullName>
    <description>This field is used to enter any additional details or incidentals that may be pertinent to the patient&apos;s assessment.</description>
    <label>Incidentals</label>
    <length>250</length>
    <type>Text</type>
</CustomField>