force-app/main/default/objects/Pre_assessment__c/fields/Interested_in_anti_craving_medic__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_anti_craving_medic__c</fullName>
    <description>This field is used to ask the patient&apos;s willingness to take the medication Vivitrol.</description>
    <label>Are you willing to take vivitrol?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>