force-app/main/default/objects/Pre_assessment__c/fields/Is_client_currently_taking_medications__c.field-meta.xml
<CustomField>
    <fullName>Is_client_currently_taking_medications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to inquire whether the patient is currently taking any medications.</description>
    <inlineHelpText>*Inform client not to bring medication of just a couple day&apos;s worth*</inlineHelpText>
    <label>Is client currently taking medications</label>
    <type>Checkbox</type>
</CustomField>