force-app/main/default/objects/Pre_assessment__c/fields/Is_your_insurance_through_your_employer__c.field-meta.xml
<CustomField>
    <fullName>Is_your_insurance_through_your_employer__c</fullName>
    <description>This field is used to inquire whether the patient&apos;s employer is aware of and supports their treatment.</description>
    <label>Employer insured &amp; aware of treatment?</label>
    <type>TextArea</type>
</CustomField>