force-app/main/default/objects/Pre_assessment__c/fields/List_any_previous_overdoses__c.field-meta.xml
<CustomField>
    <fullName>List_any_previous_overdoses__c</fullName>
    <description>This field is used to provide details about any previous overdose incidents the patient has experienced.</description>
    <label>List any previous overdoses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>