force-app/main/default/objects/Pre_assessment__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to record the full name of the patient.</description>
    <inlineHelpText>If You Choose Patient Name than &quot;DOB,Subscriber DOB,Phone,Policy Subscriber Name&quot; will auto fill after save of record</inlineHelpText>
    <label>Name of Patient</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Pre Assessments</relationshipLabel>
    <relationshipName>Pre_assessments</relationshipName>
    <type>Lookup</type>
</CustomField>