force-app/main/default/objects/Pre_assessment__c/fields/Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to record the full name of the patient.</description>
    <label>Patient Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Pre Assessments (Patient Name)</relationshipLabel>
    <relationshipName>Pre_assessments1</relationshipName>
    <type>Lookup</type>
</CustomField>