force-app/main/default/objects/Pre_assessment__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>This field is used to record the phone number of the patient.</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>