force-app/main/default/objects/Pre_assessment__c/fields/Reason_for_deniel__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_deniel__c</fullName>
    <description>This field is used to enter details about the patient&apos;s reasons for denying certain aspects of the assessment.</description>
    <label>Reason for denial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medically Denied</fullName>
            </value>
            <value>
                <fullName>Clinically Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>