force-app/main/default/objects/Pre_assessment__c/fields/Receiving_your_income_while_in_treatment__c.field-meta.xml
<CustomField>
    <fullName>Receiving_your_income_while_in_treatment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to inquire whether the patient is receiving income while undergoing treatment.</description>
    <label>Receiving your income while in treatment</label>
    <type>Checkbox</type>
</CustomField>