force-app/main/default/objects/Pre_assessment__c/fields/Seeking_Treatment_Due_To_Relapse__c.field-meta.xml
<CustomField>
    <fullName>Seeking_Treatment_Due_To_Relapse__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate whether the patient is seeking treatment as a result of a relapse.</description>
    <label>Seeking treatment due to relapse?</label>
    <type>Checkbox</type>
</CustomField>