force-app/main/default/objects/Pre_assessment__c/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <description>This field is used to capture the patient&apos;s Social Security Number for identification purposes.</description>
    <label>SSN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>