force-app/main/default/objects/Pre_assessment__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>This field is used to describe the patient&apos;s current stage in the treatment process.</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assesment Pending</fullName>
                <default>true</default>
                <label>Assesment Pending</label>
            </value>
            <value>
                <fullName>Submit For Approval</fullName>
            </value>
            <value>
                <fullName>Assessment Approval Requested</fullName>
                <label>Assessment Requested</label>
            </value>
            <value>
                <fullName>Assessment Approved</fullName>
            </value>
            <value>
                <fullName>Assessment Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>