force-app/main/default/objects/Pre_assessment__c/validationRules/reasonofdeniel.validationRule-meta.xml
<ValidationRule>
    <fullName>reasonofdeniel</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Stage__c), ISPICKVAL(Stage__c, &apos;Assessment Denied&apos;) , ISBLANK(TEXT(Reason_for_deniel__c))  )</errorConditionFormula>
    <errorMessage>Please Fill &quot;Reason for Deniel&quot;</errorMessage>
</ValidationRule>