force-app/main/default/objects/Pre_assessment__c/listViews/All_Pre_Assessments.listView-meta.xml
<ListView>
    <fullName>All_Pre_Assessments</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Stage__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>All - Pre Assessments</label>
</ListView>